[package]
name = "hobofan_stdweb_logger"
description = "Crude logger implementation for use with stdweb"
repository = "https://github.com/hobofan/stdweb_logger"
documentation = "https://docs.rs/hobofan_stdweb_logger"
version = "0.1.0"
license = "MIT OR Apache-2.0"
keywords = ["stdweb", "log", "logger"]
authors = ["Maximilian Goisser <goisser94@gmail.com>"]

[dependencies]
log = { version = "0.4.1", features = ["std"] }
stdweb = "0.3.0"
